# pymazunki

./: README.md  pyproject.toml
mazunki/: __init__.py  __main__.py  rc.py
mazunki/chronos/: __init__.py  __main__.py  __test__.py  calculate.py
mazunki/chronos/idling/: calculator.py
mazunki/fs/: __init__.py  fs.py
mazunki/maths/: __init__.py  binary.py  divisors.pyx  fizzbuzz.py  logarithms.py  multiplication.py  predictions.py
mazunki/minecraft/: __init__.py  __main__.py
mazunki/projects/: lsproj.py  types.py
mazunki/pythoning/: __init__.py
mazunki/pythoning/fmt/: __init__.py  clear.py  expressions.py  formatters.py  printing.py
mazunki/pythoning/packaging/: __init__.py  library.py  loaders.py
mazunki/pythoning/typed/: __init__.py  __test__.py  casting.py  collections.py  errors.py  expressions.py  static.py
mazunki/pythoning/xdg/: __init__.py
