[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mazunki"
version = "0.1.dev1"
description = "A bunch of helper thingies, nothing in particular."
readme = "README.md"
authors = [
	{name="Mazunki Hoksaas", email= "rolferen@gmail.com"}
]
license = { text = "GPL3.0" }

requires-python = ">=3.12"
# half of these are just for personal convenience/access
dependencies = [
	"numpy>=1.26",
	"pandas>=2.2.2",
	"matplotlib>=3.8.4",
]

#  vim: set sw=8 ts=8

